# Carbon-Footprint-Monitoring

./: routes.txt
carbon-backend/: ROUTE_TABLE_MAPPING.md  pyproject.toml
carbon-backend/app/: main.py
carbon-backend/app/api/v1/: analytics.py
carbon-backend/scripts/: seed_all_data.py  seed_all_data.sql  seed_all_data_sql.py
website/: package-lock.json  package.json
website/src/app/: layout.tsx
website/src/app/activities/: page.tsx
website/src/app/admin/: page.tsx
website/src/app/analytics/: layout.tsx  page.tsx
website/src/app/benchmarks/: page.tsx
website/src/app/collaborate/: page.tsx
website/src/app/components-demo/: page.tsx
website/src/app/dashboard/: page.tsx
website/src/app/emissions/: page.tsx
website/src/app/facilities/: page.tsx
website/src/app/factors/: page.tsx
website/src/app/goals/: page.tsx
website/src/app/health/: page.tsx
website/src/app/ingest/: page.tsx
website/src/app/offsets/: page.tsx
website/src/app/profile/: page.tsx
website/src/app/report/: page.tsx
website/src/app/reports/: page.tsx
website/src/app/upload/: page.tsx
website/src/app/userManagement/: page.tsx
website/src/app/users/: page.tsx
website/src/components/: NotificationCenter.tsx  ProtectedRoute.tsx  Providers.tsx
website/src/components/admin/: SideBar.tsx
website/src/components/advanced/: AdvancedSearch.tsx  BulkOperations.tsx  ExportButton.tsx
website/src/components/dashboard/: Header.tsx
website/src/hooks/: useBulkSelection.ts  useFormValidation.ts  useSavedFilters.ts
website/src/lib/: export.ts  websocket.ts
(+40 files in other folders)
