[project]
name = "carbon-backend"
version = "0.1.0"
description = "Carbon Footprint Monitoring API (FastAPI)"
authors = [
  { name = "Your Org", email = "dev@example.com" }
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "SQLAlchemy>=2.0",
  "psycopg2-binary",
  "alembic",
  "pydantic>=2.0",
  "pydantic-settings",
  "python-multipart",
  "redis",
  "celery",
  "pandas",
  "passlib[bcrypt]",
  "python-jose[cryptography]",
  "python-dateutil",
  "pytest"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["carbon-backend"]
